2008-08-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkItemFactory.t: Fix test failures.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_hide_on_delete.

	* xs/GtkWindow.xs: Fix small error in the description POD section.
	Patch by Kevin Ryde.

	* t/GtkScaleButton.t
	* xs/GtkScaleButton.xs: Wrap gtk_scale_button_set_orientation and
	gtk_scale_button_get_orientation.

	* t/GtkSocket-GtkPlug.t
	* xs/GtkPlug.xs: Fix the gtk_plug_new_for_display wrapper so it is
	callable as Gtk2::Plug->new_for_display(display, socket_id).  For
	backwards compatibility, also allow
	Gtk2::Plug::new_for_display(display, socket_id).

	* t/GtkSocket-GtkPlug.t
	* xs/GtkPlug.xs: Wrap gtk_plug_get_embedded and
	gtk_plug_get_socket_window.

	* t/GtkMessageDialog.t
	* xs/GtkMessageDialog.xs: Wrap gtk_message_dialog_get_image.

	* t/GtkMenuItem.t
	* xs/GtkMenuItem.xs: Wrap gtk_menu_item_get_accel_path.

	* t/GtkMenu.t
	* xs/GtkMenu.xs: Wrap gtk_menu_get_accel_path and
	gtk_menu_get_monitor.

	* xs/GtkHandleBox.xs: Use gtk_handle_box_get_child_detached if
	available.

	* t/GtkEntry.t
	* xs/GtkEntry.xs: Wrap gtk_entry_set_overwrite_mode,
	gtk_entry_get_overwrite_mode, and gtk_entry_get_text_length.

	* t/GtkColorSelectionDialog.t
	* xs/GtkColorSelectionDialog.xs: Wrap
	gtk_color_selection_dialog_get_color_selection; deprecate
	Gtk2::ColorSelectionDialog->colorsel.

	* t/GtkCalendar.t
	* xs/GtkCalendar.xs: Wrap gtk_calendar_get_detail_width_chars,
	gtk_calendar_set_detail_width_chars,
	gtk_calendar_get_detail_height_rows and
	gtk_calendar_set_detail_height_rows.

2008-08-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkPixmap.xs
	* xs/GtkGC.xs
	* xs/PangoCairo.xs: Add hierarchy sections to the unregistered
	custom subclasses Gtk2::Gdk::Bitmap, Gtk2::GC, and
	Gtk2::Pango::Cairo::Context.

	* t/GdkWindow.t
	* xs/GdkWindow.xs: Wrap gdk_window_redirect_to_drawable and
	gdk_window_remove_redirection.

	* t/GdkScreen.t
	* xs/GdkScreen.xs: Wrap gdk_screen_get_monitor_height_mm,